media/overseerr/overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      serviceAccountName: overseerr
      containers:
        - name: overseerr
          image: overseerr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  selector:
    app: overseerr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5055
  type: ClusterIP
