media/overseerr/manifest.yaml
---
# Source: homelab/charts/overseerr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    helm.sh/chart: overseerr-0.1.12
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5055
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
---
# Source: homelab/charts/overseerr/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  labels:
    helm.sh/chart: overseerr-0.1.12
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
      app.kubernetes.io/instance: overseerr
  template:
    metadata:
      labels:
        helm.sh/chart: overseerr-0.1.12
        app.kubernetes.io/name: overseerr
        app.kubernetes.io/instance: overseerr
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: overseerr
      securityContext:
        {}
      containers:
        - name: overseerr
          image: "ghcr.io/sct/overseerr:1.34.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-pvc
---
# Source: homelab/charts/overseerr/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  labels:
    helm.sh/chart: overseerr-0.1.12
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "overseerr.int.kyledev.co"
    - "overseerr.ts.kyledev.co"
    - "overseerr.kyledev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: overseerr
        port: 80
---
# Source: homelab/charts/overseerr/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: overseerr
  labels:
    helm.sh/chart: overseerr-0.1.12
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: overseerr
  extAuth:
    grpc:
      backendRefs:
      - group: ""
        kind: Service
        name: homelab-envoy-proxy-bouncer
        namespace: envoy-gateway-system
        port: 8080
